--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
     <div class="main__photo">
-      <h1 class="main__heading">Отзыв на курс от Яндекс.Практикума</h1>
+      <h1 class="main__heading">Моя история</h1>
     </div>
     <main class="main">
       <section class="about" id="about">
@@ -86,17 +86,12 @@
         <p class="rewiew__p">
           В целом, формат обучения мне близок, удобно проходить занятия на
           платформе. Теория дана небольшими фрагментами простыми для усвоения,
-          но нужно быть готовым изучать много материала самостоятельно.
-          Наставник проводит каждую неделю выбинары по той или иной теме,
-          отвечает на вопросы и предоставляет полезные материалы для
-          самостоятельного обучения.
-        </p>
-        <img src="./images/pica.jpg" class="review__image" alt="" />
-        <p class="rewiew__p">
-          Кроме этого, для меня большим плюсом является возможность общения с
+          но нужно быть готовым изучать много материала самостоятельно. Кроме
+          этого, для меня большим плюсом является возможность общения с
           одногруппниками. Это мотивирует и дает осознание, что ты не одинок на
           этом пути. Спасибо всем, кто дочитал до этого момента!
         </p>
+        <img src="./images/pica.jpg" class="review__image" alt="" />
       </section>
     </main>
     <footer class="footer">
