--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
     <div class="main__photo">
-      <h1 class="main__heading">Моя история</h1>
+      <h1 class="main__heading">#Моя история</h1>
     </div>
     <main class="main">
       <section class="about" id="about">
