--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./index.css" />
-    <title>Отзыв</title>
+    <title>Моя история</title>
   </head>
   <body class="page">
     <nav class="menu">
